DTS-50661:Add junit for recommendation service impl.
Change-log: Batch processing ai-recommendation for performance improvement.